name:                variant-types
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Candidate types to variant class
-- A longer description of the package.
description:         Candidate types to variant class
homepage:            http://sanjorgek.com/variant-types
license:             GPL-3
license-file:        LICENSE
author:              Jorge Santiago Alvarez Cuadros
maintainer:          sanjorgek@ciencias.unam.mx
copyright:           (c) Jorge Santiago Alvarez Cuadros
category:            Testing
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:sanjorgek/turingMachine.git

library
  -- Modules exported by the library.
  exposed-modules:     Test.QuickCheck.Variant.Types
  -- Modules included in this library but not exported.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.6 && <5
                       , containers  
                       , QuickCheck
                       , QuickCheckVariant ==0.2.0.0
                       , hspec >=2.2 && <3
                       , hspecVariant ==0.1.0.1
  -- Directories containing source files.
  hs-source-dirs:      src
  -- Base language which the package is written in.
  default-language:    Haskell98

